# FirstGame

./: .gitignore  CMakeLists.txt
assets/: registry.txt
include/: Camera.h  ResourceManager.h  TileDefinition.h  TileMap.h  TileRegistry.h
include/core/: Camera.h  Renderer.h  Shader.h
include/resources/: ResourceManager.h  TextureLoader.h
include/tiles/: TileDefinition.h  TileMap.h
shaders/: shader.vert
src/: Camera.cpp  TextureLoader.cpp  TileMap.cpp  TileRegistry.cpp  main.cpp
src/core/: Camera.cpp  Renderer.cpp
src/resources/: ResourceManager.cpp  TextureLoader.cpp
src/tile/: TileMap.cpp
src/tiles/: TileMap.cpp  TileRegistry.cpp
